crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__noqa.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
E741 Ambiguous variable name: `I`
  --> noqa.py:24:5
22 |     # Neither of these are ignored and warning is
23 |     # logged to user
24 |     I = 1  # noqa: E741.F841
   |     ^

F841 [*] Local variable `I` is assigned to but never used
  --> noqa.py:24:5
22 |     # Neither of these are ignored and warning is
23 |     # logged to user
24 |     I = 1  # noqa: E741.F841
   |     ^
help: Remove assignment to unused variable `I`
   |
23 |     # logged to user
   -     I = 1  # noqa: E741.F841
24 +     pass  # noqa: E741.F841
   |
note: This is an unsafe fix and may change runtime behavior
