crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__prefer_parentheses_getitem_tuple.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF031 [*] Use parentheses for tuples in subscripts
  --> RUF031_prefer_parens.py:8:5
 6 |   )]
 7 |   d[
 8 | /     1,
 9 | |     2
   | |_____^
10 |   ]
11 |   d[(2,4)]
help: Parenthesize tuple
   |
7  | d[
   -     1,
   -     2
8  +     (1,
9  +     2)
10 | ]
   |

RUF031 [*] Use parentheses for tuples in subscripts
  --> RUF031_prefer_parens.py:16:3
   |
14 | d[tuple(1,2)]
15 | d[tuple(8)]
16 | d[1,2]
   |   ^^^
17 | d[3,4]
18 | d[5,6,7]
help: Parenthesize tuple
   |
15 | d[tuple(8)]
   - d[1,2]
16 + d[(1,2)]
17 | d[3,4]
   |

RUF031 [*] Use parentheses for tuples in subscripts
  --> RUF031_prefer_parens.py:17:3
   |
15 | d[tuple(8)]
16 | d[1,2]
17 | d[3,4]
   |   ^^^
18 | d[5,6,7]
19 | e = {((1,2),(3,4)):"a"}
help: Parenthesize tuple
   |
16 | d[1,2]
   - d[3,4]
17 + d[(3,4)]
18 | d[5,6,7]
   |

RUF031 [*] Use parentheses for tuples in subscripts
  --> RUF031_prefer_parens.py:18:3
   |
16 | d[1,2]
17 | d[3,4]
18 | d[5,6,7]
   |   ^^^^^
19 | e = {((1,2),(3,4)):"a"}
20 | e[((1,2),(3,4))]
help: Parenthesize tuple
   |
17 | d[3,4]
   - d[5,6,7]
18 + d[(5,6,7)]
19 | e = {((1,2),(3,4)):"a"}
   |

RUF031 [*] Use parentheses for tuples in subscripts
  --> RUF031_prefer_parens.py:21:3
   |
19 | e = {((1,2),(3,4)):"a"}
20 | e[((1,2),(3,4))]
21 | e[(1,2),(3,4)]
   |   ^^^^^^^^^^^
22 |
23 | token_features[
help: Parenthesize tuple
   |
20 | e[((1,2),(3,4))]
   - e[(1,2),(3,4)]
21 + e[((1,2),(3,4))]
22 |
   |

RUF031 [*] Use parentheses for tuples in subscripts
  --> RUF031_prefer_parens.py:26:3
   |
24 |     (window_position, feature_name)
25 | ] = self._extract_raw_features_from_token
26 | d[1,]
   |   ^^
27 | d[(1,)]
28 | d[()] # empty tuples should be ignored
help: Parenthesize tuple
   |
25 | ] = self._extract_raw_features_from_token
   - d[1,]
26 | d[(1,)]
27 + d[(1,)]
28 | d[()] # empty tuples should be ignored
   |
