crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__property_without_return_custom_decorator.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF066 `missing_return` is a property without a `return` statement
 --> RUF066_custom_property_decorator.py:6:9
  |
4 | class Example:
5 |     @custom_property
6 |     def missing_return(self):  # ERROR: No return
  |         ^^^^^^^^^^^^^^
7 |         x = 1

RUF066 `builtin_property` is a property without a `return` statement
  --> RUF066_custom_property_decorator.py:14:9
   |
13 |     @property
14 |     def builtin_property(self):  # ERROR: No return (builtin @property still works)
   |         ^^^^^^^^^^^^^^^^
15 |         x = 1
